WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280793
REGRESSION(
283008@main
): spotify.com crashes when loading an artist
https://bugs.webkit.org/show_bug.cgi?id=280793
Summary
REGRESSION(283008@main): spotify.com crashes when loading an artist
Antti Koivisto
Reported
2024-10-02 17:25:05 PDT
regression from late calc() evaluation
Attachments
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2024-10-02 17:25:29 PDT
rdar://136786673
Antti Koivisto
Comment 2
2024-10-02 17:29:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34603
EWS
Comment 3
2024-10-02 18:03:56 PDT
Committed
284592@main
(7fd47546fe44): <
https://commits.webkit.org/284592@main
> Reviewed commits have been landed. Closing PR #34603 and removing active labels.
EWS
Comment 4
2024-10-07 09:18:00 PDT
Committed
283286.211@safari-7620-branch
(50f55558af83): <
https://commits.webkit.org/283286.211@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1976 and removing active labels.
Sam Weinig
Comment 5
2024-10-07 10:06:28 PDT
Aww, bugger. Thought I found all these. Encoding the allowed range into the types is going to get rid of this class of problem (/me says very convincingly to myself)
Sam Weinig
Comment 6
2024-10-07 10:06:41 PDT
Comment hidden (obsolete)
Aww, bugger. Thought I found all these. Encoding the allowed range into the types is going to get rid of this class of problem (/me says very convincingly to myself)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug