Cherry-pick 7fd47546fe44. rdar://137307866

REGRESSION(283008@main): spotify.com crashes when loading an artist
    https://bugs.webkit.org/show_bug.cgi?id=280793
    rdar://136786673

    Reviewed by Alan Baradlay.

    After 283008@main we evaluate integer calc() late. This allowed an illegal negative value
    through with

    grid-column-start: span calc(-1)

    that grid layout code couldn't handle.

    * LayoutTests/fast/css/grid-span-calc-negative-crash-expected.txt: Added.
    * LayoutTests/fast/css/grid-span-calc-negative-crash.html: Added.
    * Source/WebCore/style/StyleBuilderConverter.h:
    (WebCore::Style::BuilderConverter::createGridPosition):

    Don't allow negative values with span.

    Canonical link: https://commits.webkit.org/284592@main

Canonical link: https://commits.webkit.org/283286.211@safari-7620-branch